--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.cgit.ogdensuntamedwomen"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -38,5 +37,8 @@ dependencies {
     //Responsiveness
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //youtube player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
 }
